--- a/a1/index.html
+++ b/a1/index.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-2">
+    <div id="header" class="row">
+        <div id="logo" class="col-xs-12 col-sm-12 col-md-2">
             <div class="jumbotron">
                 <h2>Logo</h2>
                 <p>Logo goes here</p>
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-10">
+        <div id="welcomeBanner" class="col-xs-12 col-sm-12 col-md-10">
             <div class="jumbotron">
                 <h2>Welcome to BuySmart!</h2>
                 <p>The first stop for all your student needs</p>
@@ -26,9 +26,9 @@
         </div>
     </div>
 
-    <div class="row">
+    <div id="mainContent" class="row">
 
-        <div class="col-xs-6 col-sm-6 col-md-2">
+        <div id="navigationMenu" class="col-xs-6 col-sm-6 col-md-2">
             <div class="row">
                 <button type="button" class="btn btn-default btn-block">All Items</button>
                 <button type="button" class="btn btn-default btn-block">Books</button>
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-        <div class="col-xs-6 col-sm-6 col-md-10">
+        <div id="productList" class="col-xs-6 col-sm-6 col-md-10">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail">
