--- a/a1/index.html
+++ b/a1/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>BuySmart</title>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" type="text/javascript"></script>
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 
 <body>
