--- a/a1/index.html
+++ b/a1/index.html
@@ -41,116 +41,132 @@
 
         <div id="productList" class="col-xs-6 col-sm-6 col-md-10">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
+            <div class="row">
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
