added site max-width 1000px, centered headers, named products

--- a/a1/index.html
+++ b/a1/index.html
@@ -7,6 +7,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" type="text/javascript"></script>
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <div id="logo" class="col-xs-12 col-sm-12 col-md-2">
             <div class="jumbotron">
                 <h2>Logo</h2>
-                <p>Logo goes here</p>
+                <p>Logo Here</p>
             </div>
         </div>
 
@@ -43,116 +44,92 @@
         <div id="productList" class="col-xs-6 col-sm-6 col-md-10">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">Sorting Box</h3>
                     </div>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">Colored Box</h3>
                     </div>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">Shirt</h3>
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">Dress</h3>
                     </div>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">Jeans</h3>
                     </div>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">Keyboard</h3>
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">Mouse</h3>
                     </div>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">Keyboard & Mouse</h3>
                     </div>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">Dell PC</h3>
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">Refurbished PC</h3>
                     </div>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">PC Tower</h3>
                     </div>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div class="thumbnail">
+                    <div class="thumbnail product">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <div class="caption">
-                            <h3>Product Name</h3>
-                        </div>
+                        <h3 id="product-name">Tent</h3>
                     </div>
                 </div>
             </div>
@@ -160,17 +137,10 @@
     </div>
 
     <hr>
-    <div class="footer">
-        <table>
-            <tr>
-                <td>
-                    <p>Developed by <a href="https://github.com/stephenhu3">Stephen Hu</a> and <a href="https://github.com/delta-nry">Nathan Yee</a></p>
-                </td>
-            </tr>
-            <tr>
-                <td>Contact Information Goes Here</td>
-            </tr>
-        </table>
+    <div id="footer">
+        <h5>Developed by <a href="https://github.com/stephenhu3">Stephen Hu</a> and <a href="https://github.com/delta-nry">Nathan Yee</a></h5>
+        <h6>Contact us at <strong>support@buysmart.xyz</strong></h6>
     </div>
 </body>
+
 </html>
