Add spacing and heights to navigationMenu buttons

--- a/a1/index.html
+++ b/a1/index.html
@@ -29,13 +29,27 @@
 
         <div id="navigationMenu" class="col-xs-6 col-sm-6 col-md-2">
             <div class="row">
-                <button type="button" class="btn btn-default btn-block">All Items</button>
-                <button type="button" class="btn btn-default btn-block">Books</button>
-                <button type="button" class="btn btn-default btn-block">Clothing</button>
-                <button type="button" class="btn btn-default btn-block">Tech</button>
-                <button type="button" class="btn btn-default btn-block">Gifts</button>
-                <button type="button" class="btn btn-default btn-block">Stationary</button>
-                <button type="button" class="btn btn-default btn-block">Supplies</button>
+                <div class="button">
+                    <button type="button" class="btn btn-default btn-block">All Items</button>
+                </div>
+                <div class="button">
+                    <button type="button" class="btn btn-default btn-block">Books</button>
+                </div>
+                <div class="button">
+                    <button type="button" class="btn btn-default btn-block">Clothing</button>
+                </div>
+                <div class="button">
+                    <button type="button" class="btn btn-default btn-block">Tech</button>
+                </div>
+                <div class="button">
+                    <button type="button" class="btn btn-default btn-block">Gifts</button>
+                </div>
+                <div class="button">
+                    <button type="button" class="btn btn-default btn-block">Stationary</button>
+                </div>
+                <div class="button">
+                    <button type="button" class="btn btn-default btn-block">Supplies</button>
+                </div>
             </div>
         </div>
 
