--- a/a1/index.html
+++ b/a1/index.html
@@ -58,7 +58,7 @@
                 <div class="product">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <img src="products/Box1_$10.png">
                             <div class="caption">
                                 <h3>Product Name</h3>
                             </div>
@@ -68,7 +68,7 @@
                 <div class="product">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <img src="products/Box2_$5.png">
                             <div class="caption">
                                 <h3>Product Name</h3>
                             </div>
@@ -78,40 +78,7 @@
                 <div class="product">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                            <div class="caption">
-                                <h3>Product Name</h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="product">
-                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                        <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                            <div class="caption">
-                                <h3>Product Name</h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                        <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                            <div class="caption">
-                                <h3>Product Name</h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                        <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <img src="products/Clothes1_$20.png">
                             <div class="caption">
                                 <h3>Product Name</h3>
                             </div>
@@ -124,7 +91,7 @@
                 <div class="product">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <img src="products/Clothes2_$30.png">
                             <div class="caption">
                                 <h3>Product Name</h3>
                             </div>
@@ -134,7 +101,7 @@
                 <div class="product">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <img src="products/Jeans_$50.png">
                             <div class="caption">
                                 <h3>Product Name</h3>
                             </div>
@@ -144,7 +111,7 @@
                 <div class="product">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <img src="products/Keyboard_$20.png">
                             <div class="caption">
                                 <h3>Product Name</h3>
                             </div>
@@ -157,7 +124,7 @@
                 <div class="product">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <img src="products/KeyboardCombo_$40.png">
                             <div class="caption">
                                 <h3>Product Name</h3>
                             </div>
@@ -167,7 +134,7 @@
                 <div class="product">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <img src="products/Mice_$20.png">
                             <div class="caption">
                                 <h3>Product Name</h3>
                             </div>
@@ -177,7 +144,40 @@
                 <div class="product">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                         <div class="thumbnail">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                            <img src="products/PC1_$350.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="products/PC2_$400.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="products/PC3_$300.png">
+                            <div class="caption">
+                                <h3>Product Name</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <div class="thumbnail">
+                            <img src="products/Tent_$100.png">
                             <div class="caption">
                                 <h3>Product Name</h3>
                             </div>
