added hover effect for product thumbnails and product images

--- a/a1/index.html
+++ b/a1/index.html
@@ -43,93 +43,105 @@
 
         <div id="productList" class="col-xs-6 col-sm-6 col-md-10">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <h3 id="product-name">Sorting Box</h3>
+                            <img src="img/Box1_$10.png">
+                            <h3 id="product-name">Sorting Box</h3>    
+                            <div class="overlay top"><h4>$10</h4></div>
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                        <img src="img/Box2_$5.png">
                         <h3 id="product-name">Colored Box</h3>
+                        <div class="overlay top"><h4>$5</h4></div>
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                        <img src="img/Clothes2_$30.png">
                         <h3 id="product-name">Shirt</h3>
+                        <div class="overlay top"><h4>$20</h4></div>
                     </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                        <img src="img/Clothes1_$20.png">
                         <h3 id="product-name">Dress</h3>
+                        <div class="overlay top"><h4>$30</h4></div>
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                        <img src="img/Jeans_$50.png">
                         <h3 id="product-name">Jeans</h3>
+                        <div class="overlay top"><h4>$50</h4></div>
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                        <img src="img/Keyboard_$20.png">
                         <h3 id="product-name">Keyboard</h3>
+                        <div class="overlay top"><h4>$20</h4></div>
                     </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                        <img src="img/Mice_$20.png">
                         <h3 id="product-name">Mouse</h3>
+                        <div class="overlay top"><h4>$20</h4></div>
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                        <img src="img/KeyboardCombo_$40.png">
                         <h3 id="product-name">Keyboard & Mouse</h3>
+                        <div class="overlay top"><h4>$40</h4></div>
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <h3 id="product-name">Dell PC</h3>
+                        <img src="img/PC2_$400.png">
+                        <h3 id="product-name">Refurbished PC</h3>
+                        <div class="overlay top"><h4>$350</h4></div>
                     </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <h3 id="product-name">Refurbished PC</h3>
+                        <img src="img/PC1_$350.png">
+                        <h3 id="product-name">Dell PC</h3>
+                        <div class="overlay top"><h4>$400</h4></div>
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
-                        <h3 id="product-name">PC Tower</h3>
+                        <img src="img/PC3_$300.png">
+                        <h3 id="product-name">Gaming PC</h3>
+                        <div class="overlay top"><h4>$400</h4></div>
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Ski_trail_rating_symbol-blue_square.svg/600px-Ski_trail_rating_symbol-blue_square.svg.png">
+                        <img src="img/Tent_$100.png">
                         <h3 id="product-name">Tent</h3>
+                        <div class="overlay top"><h4>$100</h4></div>
                     </div>
                 </div>
             </div>
