--- a/a1/index.html
+++ b/a1/index.html
@@ -31,13 +31,20 @@
 
         <div id="navigationMenu" class="col-xs-6 col-sm-6 col-md-2">
             <div class="row">
-                <button type="button" class="btn btn-default btn-block">All Items</button>
-                <button type="button" class="btn btn-default btn-block">Books</button>
-                <button type="button" class="btn btn-default btn-block">Clothing</button>
-                <button type="button" class="btn btn-default btn-block">Tech</button>
-                <button type="button" class="btn btn-default btn-block">Gifts</button>
-                <button type="button" class="btn btn-default btn-block">Stationary</button>
-                <button type="button" class="btn btn-default btn-block">Supplies</button>
+                <button type="button" class="btn btn-block">
+                    <h4>All Items</h4></button>
+                <button type="button" class="btn btn-block">
+                    <h4>Books</h4></button>
+                <button type="button" class="btn btn-block">
+                    <h4>Clothing</h4></button>
+                <button type="button" class="btn btn-block">
+                    <h4>Tech</h4></button>
+                <button type="button" class="btn btn-block">
+                    <h4>Gifts</h4></button>
+                <button type="button" class="btn btn-block">
+                    <h4>Stationary</h4></button>
+                <button type="button" class="btn btn-block">
+                    <h4>Supplies</h4></button>
             </div>
         </div>
 
@@ -45,9 +52,10 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                            <img src="img/Box1_$10.png">
-                            <h3 id="product-name">Sorting Box</h3>    
-                            <div class="overlay top"><h4>$10</h4></div>
+                        <img src="img/Box1_$10.png">
+                        <h3 id="product-name">Sorting Box</h3>
+                        <div class="overlay top">
+                            <h4>$10</h4></div>
                     </div>
                 </div>
 
@@ -55,7 +63,8 @@
                     <div class="thumbnail product">
                         <img src="img/Box2_$5.png">
                         <h3 id="product-name">Colored Box</h3>
-                        <div class="overlay top"><h4>$5</h4></div>
+                        <div class="overlay top">
+                            <h4>$5</h4></div>
                     </div>
                 </div>
 
@@ -63,7 +72,8 @@
                     <div class="thumbnail product">
                         <img src="img/Clothes2_$30.png">
                         <h3 id="product-name">Shirt</h3>
-                        <div class="overlay top"><h4>$20</h4></div>
+                        <div class="overlay top">
+                            <h4>$20</h4></div>
                     </div>
                 </div>
             </div>
@@ -73,7 +83,8 @@
                     <div class="thumbnail product">
                         <img src="img/Clothes1_$20.png">
                         <h3 id="product-name">Dress</h3>
-                        <div class="overlay top"><h4>$30</h4></div>
+                        <div class="overlay top">
+                            <h4>$30</h4></div>
                     </div>
                 </div>
 
@@ -81,7 +92,8 @@
                     <div class="thumbnail product">
                         <img src="img/Jeans_$50.png">
                         <h3 id="product-name">Jeans</h3>
-                        <div class="overlay top"><h4>$50</h4></div>
+                        <div class="overlay top">
+                            <h4>$50</h4></div>
                     </div>
                 </div>
 
@@ -89,7 +101,8 @@
                     <div class="thumbnail product">
                         <img src="img/Keyboard_$20.png">
                         <h3 id="product-name">Keyboard</h3>
-                        <div class="overlay top"><h4>$20</h4></div>
+                        <div class="overlay top">
+                            <h4>$20</h4></div>
                     </div>
                 </div>
             </div>
@@ -99,7 +112,8 @@
                     <div class="thumbnail product">
                         <img src="img/Mice_$20.png">
                         <h3 id="product-name">Mouse</h3>
-                        <div class="overlay top"><h4>$20</h4></div>
+                        <div class="overlay top">
+                            <h4>$20</h4></div>
                     </div>
                 </div>
 
@@ -107,7 +121,8 @@
                     <div class="thumbnail product">
                         <img src="img/KeyboardCombo_$40.png">
                         <h3 id="product-name">Keyboard & Mouse</h3>
-                        <div class="overlay top"><h4>$40</h4></div>
+                        <div class="overlay top">
+                            <h4>$40</h4></div>
                     </div>
                 </div>
 
@@ -115,7 +130,8 @@
                     <div class="thumbnail product">
                         <img src="img/PC2_$400.png">
                         <h3 id="product-name">Refurbished PC</h3>
-                        <div class="overlay top"><h4>$350</h4></div>
+                        <div class="overlay top">
+                            <h4>$350</h4></div>
                     </div>
                 </div>
             </div>
@@ -125,7 +141,8 @@
                     <div class="thumbnail product">
                         <img src="img/PC1_$350.png">
                         <h3 id="product-name">Dell PC</h3>
-                        <div class="overlay top"><h4>$400</h4></div>
+                        <div class="overlay top">
+                            <h4>$400</h4></div>
                     </div>
                 </div>
 
@@ -133,7 +150,8 @@
                     <div class="thumbnail product">
                         <img src="img/PC3_$300.png">
                         <h3 id="product-name">Gaming PC</h3>
-                        <div class="overlay top"><h4>$400</h4></div>
+                        <div class="overlay top">
+                            <h4>$400</h4></div>
                     </div>
                 </div>
 
@@ -141,14 +159,15 @@
                     <div class="thumbnail product">
                         <img src="img/Tent_$100.png">
                         <h3 id="product-name">Tent</h3>
-                        <div class="overlay top"><h4>$100</h4></div>
+                        <div class="overlay top">
+                            <h4>$100</h4></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <hr>
+    <hr id="divider">
     <div id="footer">
         <h5>Developed by <a href="https://github.com/stephenhu3">Stephen Hu</a> and <a href="https://github.com/delta-nry">Nathan Yee</a></h5>
         <h6>Contact us at <strong>support@buysmart.xyz</strong></h6>
