--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" type="text/css">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    <script src="js/cart.js"></script>
 </head>
 
 <body>
