--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -56,6 +56,8 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/Box1_$10.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button id="add-cart">Add</button>
+                            <button id="remove-cart">Remove</button>
                           </div>
                         </div>
                         <h3 id="product-name">Sorting Box</h3>
