added timeout interval for show cart

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -35,6 +35,8 @@
 
         <div id="navigationMenu" class="col-xs-6 col-sm-6 col-md-2">
             <div class="row">
+                <button type="button" class="btn btn-block show-cart">
+                    <h4>Show Cart</h4></button>
                 <button type="button" class="btn btn-block">
                     <h4>All Items</h4></button>
                 <button type="button" class="btn btn-block">
