added inactivity time display to footer. Refactored inactiveTime

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -35,7 +35,7 @@
         <div id="navigationMenu" class="col-xs-6 col-sm-6 col-md-2">
             <div class="row">
                 <button type="button" class="btn btn-block show-cart">
-                    <h4 id = "cart-btn"></h4></button>
+                    <h4 id="cart-btn"></h4></button>
                 <button type="button" class="btn btn-block">
                     <h4>All Items</h4></button>
                 <button type="button" class="btn btn-block">
@@ -282,6 +282,7 @@
 
     <hr id="divider">
     <div id="footer">
+        <h5 id="inactivity-counter"></h5>
         <h5>Developed by <a href="https://github.com/stephenhu3">Stephen Hu</a> and <a href="https://github.com/delta-nry">Nathan Yee</a></h5>
         <h6>Contact us at <strong>support@buysmart.xyz</strong></h6>
     </div>
