--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -18,7 +18,29 @@
     <div id="open-cart-modal" class="cart-modal">
         <div> 
             <a href="#close" title="Close" class="close-cart-modal">X</a>
-            <h2>Items in Cart</h2>
+            <h3>Items in Cart</h3>
+            <div class="row">
+                <div class="col-xs-3 col-sm-3 col-md-3">
+                    <h4>Name</h4>
+                    <div class="cart-product-name"></div>
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3">
+                    <h4>Price</h4>
+                    <div class="cart-product-price"></div>
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3">
+                    <h4>Quantity</h4>
+                    <div class="cart-product-quantity"></div>
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3">
+                    <h4>Subtotal</h4>
+                    <div class="cart-product-subtotal"></div>
+                    <h4 id="cart-total">Total: </h4>
+                    <button type="button" class="btn show-cart" id="cart-checkout">
+                        <h4>Checkout</h4>
+                    </button> 
+                </div>
+            </div>
         </div>
     </div>
     <div id="header" class="row">
