Use separate product displayed name from internal representation. Decoupled view from model. Refactored removeFromCart button appearance logic accordingly.

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -96,9 +96,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
-                        <h3 class="product-name">Box1</h3>
-                        <!-- <h3 class="product-name">Sorting Box</h3> -->
+                        <h3 class="product-name">Sorting Box</h3>
                         <div class="overlay top">
                             <h4>$10</h4>
                         </div>
@@ -114,9 +112,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
-                        <h3 class="product-name">Box2</h3>
-                        <!-- <h3 class="product-name">Colored Box</h3> -->
+                        <h3 class="product-name">Colored Box</h3>
                         <div class="overlay top">
                             <h4>$5</h4>
                         </div>
@@ -132,9 +128,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
-                        <h3 class="product-name">Clothes2</h3>
-                        <!-- <h3 class="product-name">Shirt</h3> -->
+                        <h3 class="product-name">Shirt</h3>
                         <div class="overlay top">
                             <h4>$30</h4>
                         </div>
@@ -152,9 +146,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
-                        <h3 class="product-name">Clothes1</h3>
-                        <!-- <h3 class="product-name">Dress</h3> -->
+                        <h3 class="product-name">Dress</h3>
                         <div class="overlay top">
                             <h4>$20</h4>
                         </div>
@@ -170,9 +162,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
                         <h3 class="product-name">Jeans</h3>
-                        <!-- <h3 class="product-name">Jeans</h3> -->
                         <div class="overlay top">
                             <h4>$50</h4>
                         </div>
@@ -188,9 +178,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
                         <h3 class="product-name">Keyboard</h3>
-                        <!-- <h3 class="product-name">Keyboard</h3> -->
                         <div class="overlay top">
                             <h4>$20</h4>
                         </div>
@@ -208,9 +196,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
-                        <h3 class="product-name">Mice</h3>
-                        <!-- <h3 class="product-name">Mouse</h3> -->
+                        <h3 class="product-name">Mouse</h3>
                         <div class="overlay top">
                             <h4>$20</h4>
                         </div>
@@ -226,9 +212,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
-                        <h3 class="product-name">KeyboardCombo</h3>
-                        <!-- <h3 class="product-name">Keyboard & Mouse</h3> -->
+                        <h3 class="product-name">Keyboard and Mouse</h3>
                         <div class="overlay top">
                             <h4>$40</h4>
                         </div>
@@ -244,9 +228,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
-                        <h3 class="product-name">PC2</h3>
-                        <!-- <h3 class="product-name">Refurbished PC</h3> -->
+                        <h3 class="product-name">Refurbished PC</h3>
                         <div class="overlay top">
                             <h4>$400</h4>
                         </div>
@@ -264,9 +246,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
-                        <h3 class="product-name">PC1</h3>
-                        <!-- <h3 class="product-name">Dell PC</h3> -->
+                        <h3 class="product-name">Dell PC</h3>
                         <div class="overlay top">
                             <h4>$350</h4>
                         </div>
@@ -282,9 +262,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
-                        <h3 class="product-name">PC3</h3>
-                        <!-- <h3 class="product-name">Gaming PC</h3> -->
+                        <h3 class="product-name">Gaming PC</h3>
                         <div class="overlay top">
                             <h4>$300</h4>
                         </div>
@@ -300,9 +278,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <!-- Renaming products for sake of automated tests -->
                         <h3 class="product-name">Tent</h3>
-                        <!-- <h3 class="product-name">Tent</h3> -->
                         <div class="overlay top">
                             <h4>$100</h4>
                         </div>
