Convert modal transition events from HTML/CSS to jQuery

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -16,8 +16,8 @@
 
 <body>
     <div id="open-cart-modal" class="cart-modal">
-        <div> 
-            <a href="#close" title="Close" class="close-cart-modal">X</a>
+        <div>
+            <span title="Close" class="close-cart-modal">X</span>
             <h3>Items in Cart</h3>
             <div class="row">
                 <div class="col-xs-3 col-sm-3 col-md-3">
@@ -47,7 +47,6 @@
                             <button class="add-quantity">+</button>
                             <button class="remove-quantity">-</button>
                         </div>
-                        
                     </div>
                 </div>
                 <div class="col-xs-3 col-sm-3 col-md-3">
@@ -60,7 +59,7 @@
                     <h4 id="cart-total">Total:&nbsp;&nbsp;$270</h4>
                     <button type="button" class="btn show-cart" id="cart-checkout">
                         <h4>Checkout</h4>
-                    </button> 
+                    </button>
                 </div>
             </div>
         </div>
@@ -85,11 +84,9 @@
 
         <div id="navigationMenu" class="col-xs-6 col-sm-6 col-md-2">
             <div class="row">
-                <a href="#open-cart-modal">
-                    <button type="button" class="btn btn-block show-cart">
-                        <h4 id="cart-btn"></h4>
-                    </button>    
-                </a>
+                <button type="button" class="btn btn-block show-cart">
+                    <h4 id="cart-btn"></h4>
+                </button>
                 <button type="button" class="btn btn-block">
                     <h4>All Items</h4></button>
                 <button type="button" class="btn btn-block">
