--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -234,7 +234,7 @@
                             <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 class="product-name">Keyboard and Mouse</h3>
+                        <h3 class="product-name">Keyboard &amp; Mouse</h3>
                         <div class="overlay top">
                             <h4>$40</h4>
                         </div>
